@@ -11,16 +11,15 @@ import org.slf4j.LoggerFactory;
 import javax.imageio.ImageIO;
 import java.awt.image.BufferedImage;
 import java.io.File;
+import java.io.IOException;
 import java.net.URI;
-import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.Arrays;
 
 /**
  * TODO Consider to use any third party library https://www.baeldung.com/java-images
  */
-public class DemoApp {
+class DemoApp {
 
     private static final Logger logger = LoggerFactory.getLogger(DemoApp.class);
     private static Path tmpDir;
@@ -29,47 +28,52 @@ public class DemoApp {
         System.out.println("Hi there! This is demo application for image resizing");
 
         try {
-            System.out.println("Supported formats:");
-            Arrays.stream(ImageIO.getWriterFormatNames()).forEach(System.out::println);
-
             tmpDir = Files.createTempDirectory("resized_images_");
             ResizeParams resizeParams = ParamsValidator.getInstance(args).
                     useDefault().
                     withAlgorithm(ResizeType.KEEP_ASPECT_RATIO).
                     withPath("https://static.ngs.ru/news/99/preview/e88eba0dbd5cd0e30ee349a3a3c54dbd07d2b28f_712.jpg").
                     validate();
-            processURI(resizeParams);
+            process(resizeParams);
 
             resizeParams = ParamsValidator.getInstance(args).useDefault().withAlgorithm(ResizeType.KEEP_ASPECT_RATIO).validate();
-            processURI(resizeParams);
-
+            process(resizeParams);
         } catch (Exception e) {
             logger.error(e.getMessage(), e);
         }
     }
 
-    private static void processURI(final ResizeParams resizeParams) {
+    private static void process(final ResizeParams resizeParams) {
         try {
+            if (resizeParams.isFormatNotSupported()) {
+                System.out.println(String.format("File format '%s' is not supported", resizeParams.getExtension()));
+                return;
+            }
+
             BufferedImage img;
-            if (resizeParams.isUrl()) {
-                img = ImageIO.read(new URL(resizeParams.getPathToFile()));
+            if (resizeParams.isSimilarToURL()) {
+                img = ImageIO.read(resizeParams.toURI().toURL());
             } else {
-                File file = new File(new URI(resizeParams.getPathToFile()));
+                File file = new File(resizeParams.toURI());
                 img = ImageIO.read(file);
             }
 
             if (img != null) {
                 final ImageResizer imageResizer = ResizersFactory.create(resizeParams.getAlgorithm());
-                BufferedImage outputImage = imageResizer.resize(img, resizeParams.getWidth(), resizeParams.getHeight());
+                final BufferedImage outputImage = imageResizer.resize(img, resizeParams.getWidth(), resizeParams.getHeight());
 
-                // TODO save file in the same file-type as a source image
-                final URI outputUri = tmpDir.resolve("resized_file.png").toUri();
-                File outputFile = new File(outputUri);
-                ImageIO.write(outputImage, "png", outputFile);
-                System.out.println("Resized " + outputUri);
+                saveToFile(resizeParams, outputImage);
             }
         } catch (Exception e) {
             logger.error(e.getMessage(), e);
         }
+    }
+
+    private static void saveToFile(final ResizeParams resizeParams, final BufferedImage outputImage)
+            throws IOException {
+        final URI outputUri = tmpDir.resolve(resizeParams.getOutputName()).toUri();
+        final File outputFile = new File(outputUri);
+        ImageIO.write(outputImage, resizeParams.getExtension(), outputFile);
+        System.out.println("Resized " + outputUri);
     }
 }
